<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SortActivity">

        <EditText
            android:id="@+id/array_length_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/sort_input_hint"
            android:text="@string/default_array_length_10000"
            android:inputType="number" />

        <Button
            android:id="@+id/array_gen_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/array_length_et"
            android:text="@string/gen_array" />

        <TextView
            android:id="@+id/gen_array_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/array_gen_btn" />

        <TextView
            android:id="@+id/gen_time_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gen_array_tv" />

        <Button
            android:id="@+id/start_sort_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gen_time_tv"
            android:text="@string/start_sort" />

        <TextView
            android:id="@+id/sort_array_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_sort_btn" />

        <TextView
            android:id="@+id/sort_time_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sort_array_tv" />

        <RadioGroup
            android:id="@+id/sort_rbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/sort_time_tv"
            app:layout_constraintStart_toStartOf="parent">
            <RadioButton
                android:id="@+id/quick_sort_rb"
                android:layout_width="wrap_content"
                android:checked="true"
                android:text="@string/quick_sort_txt"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/bubble_sort_rb"
                android:layout_width="wrap_content"
                android:text="@string/bubble_sort_txt"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/select_sort_rb"
                android:layout_width="wrap_content"
                android:text="@string/select_sort_txt"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/insert_sort_rb"
                android:layout_width="wrap_content"
                android:text="@string/insert_sort_txt"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/merge_sort_rb"
                android:layout_width="wrap_content"
                android:text="@string/merge_sort_txt"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/heap_sort_rb"
                android:layout_width="wrap_content"
                android:text="@string/heap_sort_txt"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
